<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="com.example.chawki.imctest.MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/poids"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/activity_main_inputPoids_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/donnez_votre_poids_kg"
        android:inputType="number|numberDecimal" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/taille"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/activity_main_inputTaille_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/donnez_votre_taille_cm_ou_m"
        android:inputType="number|numberDecimal" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <RadioButton
            android:id="@+id/activity_main_centimetre_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:checked="true"
            android:text="@string/centimetre" />

        <RadioButton
            android:id="@+id/activity_main_metre_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:text="@string/metre" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/activity_main_confirmer_checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmer" />

    <Button
        android:id="@+id/activity_main_calculer_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculer" />

    <Button
        android:id="@+id/activity_main_reset_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/r_sultat"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/activity_main_resultat_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vous_devez_cliquer_sur_le_bouton_calculer_l_imc_pour_obtenir_un_r_sultat"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="italic" />

</LinearLayout>
